# sdk

./: Cargo.toml  README.md  TODO
crates/mxmlc/src/: codegen.rs  diagnostics.rs
crates/mxmlc/src/verifier/: assignment_destructuring.rs  destructuring.rs  exp.rs
crates/mxmlc/todo/: asdoc.md  memory-usage.md
crates/mxmlsemantics/: Cargo.toml  README.md
crates/mxmlsemantics/src/: semantics.rs
crates/mxmlsemantics/src/semantics/: conversion.rs  database.rs  entity.rs  factory.rs  property_lookup.rs  unused.rs
crates/verifier/: Cargo.toml
crates/verifier/docs/: example.md
crates/verifier/src/: lib.rs
crates/verifier/src/compileroptions/: compiler_options.rs
crates/verifier/src/diagnostics/: whack_diagnostic.rs  whack_diagnostic_kind.rs  whack_diagnostics_texts.rs
crates/verifier/src/verifier/: control_flow.rs  destructuring.rs  directive.rs  exp.rs  function_common.rs  object_literal.rs  statement.rs  verifier.rs
crates/verifier/todo/: codegen.md  conditional-compilation.md  sw.md  verifier.md
crates/whack/: Cargo.toml  TODO
crates/whack/src/: commandprocesses.rs  lib.rs  main.rs  packagemanager.rs
crates/whack/src/commandprocesses/: check_process.rs  commons.rs
crates/whack/src/packagemanager/: dag.rs  dependency_update.rs  retrieve_dag.rs  run_cache_file.rs  whack_lockfile.rs  whack_manifest.rs  whack_package.rs
demo/: README.md  whack.toml
demo/builtins/: whack.toml
demo/builtins/src/: library.as
demo/src/: Main.as
src/: diagnostics.rs  lib.rs
src/codegen/: codegen_class_info.rs
src/diagnostics/: sw_diagnostic.rs  sw_diagnostic_kind.rs  sw_diagnostics_texts.rs  whack_diagnostic_kind.rs  whack_diagnostics_texts.rs
src/verifier/: array.rs  assignment_destructuring.rs  control_flow.rs  destructuring.rs  directive.rs  exp.rs  function_common.rs  object_literal.rs  statement.rs  verifier.rs
todo/: asdoc.md  codegen.md  conditional-compilation.md  memory-usage.md  sw.md  verifier.md
todo/tree/: directives-list.md  directives.md  statements.md  tmp-2.rs  tmp.rs
