[package]
name = "whackengine-verifier"
version = "1.0.0"
edition = "2021"
authors = ["Matheus Dias de Souza <hydroperfox@gmail.com>"]
repository = "https://github.com/whackengine/sdk"
keywords = ["actionscript", "as3", "compiler", "mxml", "css3"]
description = "MXML compiler for Whack"
license = "Apache-2.0"

[dependencies]
mxmlextrema-as3parser = "1"
whackengine-mxmlsemantics = { path = "../mxmlsemantics", version = "1" }
late_format = "1"
lazy_static = "1.4.0"
maplit = "1.0.2"
colored = "3.0.0"