[package]
name = "whackengine-whack"
version = "1.0.0"
edition = "2021"
authors = ["Matheus Dias de Souza <hydroperfox@gmail.com>"]
repository = "https://github.com/whackengine/sdk"
license = "Apache-2.0"

[dependencies]
whackengine-verifier = { path = "../verifier", version = "1" }
clap = { version = "4.5.17", features = ["cargo"] }
toml_edit = "0.22.20"
