[package]
name = "whackengine-whack"
version = "1.0.0"
edition = "2021"
authors = ["Matheus Dias de Souza <hydroperfox@gmail.com>"]
repository = "https://github.com/whackengine/sdk"
license = "Apache-2.0"

[dependencies]
whackengine-verifier = { path = "../verifier", version = "1" }
by_address = "1.2.1"
clap = { version = "4.5.17", features = ["cargo"] }
colored = "2"
hard-xml = "1.36.0"
hydroperfox-filepaths = "1"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
toml_edit = "0.22.20"
